# indent

./: ChangeLog  Makefile.am  NEWS  README.md  bootstrap  configure.ac
doc/: Makefile.am  indent.texi  stamp-vti  version.texi
man/: indent.1  indent.1.in
po/: bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hr.po  hu.po  id.po  indent.pot  it.po  ja.po  ko.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.Big5.po  zh_TW.po
regression/: Makefile  TEST
regression/input/: binary-constant.c  lexi.c  pointer-pal.c
regression/standard/: lexi.c  pointer-pal.c
src/: Makefile.am  code_io.c  comments.c  config.h.vc++.in  config.h.vms.in  gperf.c  handletoken.c  indent.gperf  indent.h  lexi.c  output.c  parse.c
src/doc/: version.texi
